corrected errors on imports

--- a/notebooks/lung_cancer_swin_transformer.ipynb
+++ b/notebooks/lung_cancer_swin_transformer.ipynb
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +99,7 @@
    ],
    "source": [
     "# Load config\n",
-    "with open(r'C:\\Users\\Administrator\\Downloads\\lung_cancer_detection\\configs/config.yaml', 'r') as f:\n",
+    "with open(r'/Users/sreethanubhuvaneshgk/Downloads/desktop/home_folder/lung-cancer-detection/configs/config.yaml', 'r') as f:\n",
     "    config = yaml.safe_load(f)\n",
     "\n",
     "print(\"Configuration loaded:\")\n",
